syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "IdiomsService.Protos";

package idiom;

message UserReply {
  int32 user_id = 1;
  string name = 2;
  string image_url = 3;
}

message LanguageReply {
  int32 language_id = 1;
  string name = 2;
  string locale = 3;
  string region = 4;
  string native_name = 5;
}

message CommentReply {
  int32 comment_id = 1;
  string text = 2;
  UserReply user = 3;
  google.protobuf.Timestamp date = 4;
  int32 likes_count = 5;
  int32 dislikes_count = 6;
  bool user_comment_like_added = 7;
  bool is_user_like = 8;
}

message IdiomReply {
  int32 idiom_id = 1;
  string text = 2;
  google.protobuf.Timestamp date_added = 5;
  LanguageReply language = 6;
  UserReply user = 7;
  int32 upvote_count = 9;
  int32 favorites_count = 10;
  bool is_favorite = 11;
}